<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Logout_Btn"
            android:layout_width="95dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_round"
            android:backgroundTint="#FFFFFF"
            android:onClick="logout"
            android:text="@string/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ProfileInfo"
            android:layout_width="368dp"
            android:layout_height="553dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/common_google_signin_btn_text_dark_pressed"
            android:backgroundTint="@android:color/background_light"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="366dp"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:id="@+id/viewinfo"
                    android:layout_width="324dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="155dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="155dp"
                    android:background="@drawable/button_round"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:text="@string/acct_info_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="Account Information" />

                <TextView
                    android:id="@+id/dispName"
                    android:layout_width="246dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="156dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="156dp"
                    android:background="@drawable/button_round"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/dispname_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewinfo"
                    app:layout_constraintVertical_bias="0.007"
                    tools:text="Account name" />

                <TextView
                    android:id="@+id/dispEmail"
                    android:layout_width="246dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="156dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="156dp"
                    android:background="@drawable/button_round"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/dispemail_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.508"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dispName"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="Account email" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="58dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="48dp"
                    android:contentDescription="@string/nameicon"
                    app:layout_constraintEnd_toStartOf="@+id/dispName"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewinfo"
                    app:srcCompat="@drawable/ic_face_black_24dp" />

                <Button
                    android:id="@+id/uploadPet"
                    android:layout_width="170dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="44dp"
                    android:background="@drawable/button_round"
                    android:text="@string/petuploadB"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dispEmail"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="Upload Pet Picture" />

                <ImageView
                    android:id="@+id/petImg"
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/ic_pets_black_24dp"
                    android:contentDescription="@string/petimage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uploadPet"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="58dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/emailicon"
                    app:layout_constraintEnd_toStartOf="@+id/dispEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:srcCompat="@drawable/ic_email_black_24dp" />

                <ImageView
                    android:id="@+id/editUser"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/button_round"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:contentDescription="@string/editUserInfo"
                    app:layout_constraintBottom_toTopOf="@+id/dispName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewinfo"
                    app:srcCompat="@drawable/ic_settings_white_24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ProfilePic"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="92dp"
            android:background="@drawable/ic_account_icon"
            android:contentDescription="@string/profile_pic"
            android:outlineProvider="background"
            android:src="@drawable/ic_account_icon"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/ProfileInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Logout_Btn"
            app:layout_constraintVertical_bias="0.02" />

        <ImageView
            android:id="@+id/EditProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/Edit_ProfilePic"
            android:onClick="Edit_Profile_Pic"
            app:layout_constraintBottom_toBottomOf="@+id/ProfilePic"
            app:layout_constraintEnd_toEndOf="@+id/ProfilePic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_edit_profilebgpic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>