<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="355dp"
        android:layout_height="650dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:text="@string/ownername"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:text="@string/responds_to"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:text="@string/description"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/nameCont"
                android:layout_width="213dp"
                android:layout_height="27dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_round"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/ownername"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contPetN"
                android:layout_width="150dp"
                android:layout_height="27dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_round"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/responds_to"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#090000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/nameCont" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="111dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="111dp"
                android:background="@drawable/button_round"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/if_seen_contact"
                android:textAlignment="center"
                android:textColor="#020000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contPImg" />

            <TextView
                android:id="@+id/contEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/button_round"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/dispemail_text"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/contDiscrip"
                android:layout_width="300dp"
                android:layout_height="129dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="28dp"
                android:text="@string/descriptio"
                android:textColor="#000000"
                android:scrollbars="vertical"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <ImageView
                android:id="@+id/contPImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="102dp"
                android:layout_marginEnd="102dp"
                android:layout_marginBottom="124dp"
                android:background="@drawable/ic_pets_black_24dp"
                android:contentDescription="@string/pet_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="132dp"
        android:background="@drawable/button_round"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/contact_information"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>